# annalise

./: .gitignore  Cargo.toml  README.md  Trunk.toml  astro.config.mjs  index.html  input.css  package-lock.json  package.json  tailwind.config.mjs  vitest.config.ts
assets/: sentry.mjs
src/: app.rs  env-example.rs  global.css  main.rs
src/components/: mod.rs
src/components/Text/: Text.test.tsx  Text.tsx  Text.utils.ts
src/components/button/: mod.rs
src/components/email/: mod.rs
src/components/footer/: mod.rs  newsletter.rs  social.rs
src/components/header/: mod.rs
src/components/icons/: amazon.rs  bluesky.rs  instagram.rs  logo.rs  mod.rs  tiktok.rs
src/components/input/: mod.rs
src/components/text/: mod.rs
src/pages/: index.astro
src/screens/: mod.rs
src/screens/circulo_vip/: mod.rs
src/screens/circulo_vip/components/: form.rs  heading.rs  mod.rs  newsletter.rs  title.rs
src/screens/circulo_vip/components/form/: mod.rs  utils.rs  validation.rs
src/screens/circulo_vip_boas_vindas/: mod.rs
src/screens/home/: mod.rs  sinopse.rs  sinopse_messages.rs
src/utils/: datadog.rs  fetch.rs  log.rs  mod.rs
