[package]
name = "annalise-site-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
dotenv = "0.15.0"
gloo-net = "0.6.0"
leptos = { version = "0.8.2", features = ["csr"] }
leptos-use = "0.16.2"
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.145"
validator = { version = "0.20", features = ["derive"] }
web-sys = "0.3.81"

[package.metadata.leptos]
lib-profile-release = "wasm-release"
